[fix]: fixed the bug where the CakeCard didn't work on mobile.

--- a/src/components/CakeCard/CakeCard.module.scss
+++ b/src/components/CakeCard/CakeCard.module.scss
@@ -1,7 +1,12 @@
 @import "../../styles/variables.scss";
 
 .card {
+  cursor: pointer;
   position: relative;
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  outline: var(--primary-color) 2px;
   width: 100%;
   grid-column: span 3;
   overflow: hidden;
@@ -11,6 +16,10 @@
   flex-direction: column;
   transition: all 0.3s;
   animation: fadeInCakeCardModule 0.5s;
+
+  a {
+    text-decoration: none;
+  }
 
   &:hover {
     transform: scale(1.005);
@@ -82,7 +91,8 @@
   }
 }
 
-.hoverInfo {
+.info {
+  cursor: default;
   position: absolute;
   top: 100%;
   height: 100%;
@@ -110,8 +120,13 @@
   }
 
   .btnCart {
-    padding: var(--padding-4);
-    border-radius: 500px;
+    width: 4rem;
+    aspect-ratio: 1/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 99px;
     border: none;
     background-color: #fff;
     transition: all 0.3s;
@@ -122,7 +137,7 @@
   }
 }
 
-.card:hover .hoverInfo {
+.infoOpen {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   background-color: var(--primary-color-transp);
@@ -151,11 +166,11 @@
     grid-column: span 6;
   }
 
-  .hoverInfo p {
+  .info p {
     display: block;
   }
 
-  .hoverInfo h4 {
+  .info h4 {
     display: none;
   }
 }
